# ChangeLog for dev-lisp/cl-lexer
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-lexer/ChangeLog,v 1.8 2005/05/24 18:48:33 mkennedy Exp $

  24 May 2005; <mkennedy@gentoo.org> cl-lexer-1-r1.ebuild:
  Keywording ~sparc

  16 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org> -cl-lexer-1.ebuild,
  cl-lexer-1-r1.ebuild:
  Keywording; Removed old ebuilds

  10 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org> cl-lexer-1-r1.ebuild:
  Keywording for ~amd64

*cl-lexer-1-r1 (12 Feb 2004)

  12 Feb 2004; <mkennedy@gentoo.org> cl-lexer-1-r1.ebuild:
  Cleanup for eclass changes.

  16 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-lexer-1.ebuild,
  metadata.xml:
  fixed install typeo, preinst, postrm, debian credits

  06 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-lexer-1.ebuild:
  cleanup

*cl-lexer-1 (07 Jul 2003)

  07 Jul 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  initial import