@@ -1,4 +1,31 @@
-MD5 819a0ff09fe5ce1350a226c91a2b9986 ChangeLog 967
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 1a981ae16da2b6e1c3350146592ddfef ChangeLog 1161
+RMD160 af90e0f38ffbdfe47c23a1118b40b4e26978fa50 ChangeLog 1161
+SHA256 1a694cdbe71a8e7a9fe8ecc1e2e64b0c38b3c01dc71acec69a6cb09d25774168 ChangeLog 1161
 MD5 6996c19be46b13b410f5b605b826e2ad cl-lexer-1-r1.ebuild 961
-MD5 9b65b0341efc8f4b29498aad23315229 metadata.xml 164
+RMD160 497da08a105dd7ed0b1f6d5eb7a96419ca776b81 cl-lexer-1-r1.ebuild 961
+SHA256 332be838375b769c0d2ca834b1f619c4838ed9272629323d18f616896b948cf1 cl-lexer-1-r1.ebuild 961
+MD5 25e6641ab657f1fa3925aa452be33cc8 cl-lexer-20060228.ebuild 724
+RMD160 c92bba0155bfa03b8c57a10cf8355cce6e43a1ac cl-lexer-20060228.ebuild 724
+SHA256 fd3260a66876901fe463bab9e69e8b17309060fafb8b2cf3e3166a748f1b8814 cl-lexer-20060228.ebuild 724
 MD5 900fb016d089c5e600fbb6248b071b29 files/digest-cl-lexer-1-r1 128
+RMD160 6732c2441e83dcd0f030635cd0aad1a37d6222ea files/digest-cl-lexer-1-r1 128
+SHA256 518bdc9bf387aa5cf0bfabfaf718919b1ff1b9d86926d2d2f48344c8744c007c files/digest-cl-lexer-1-r1 128
+MD5 1221e0ebca77797425c466af9e506542 files/digest-cl-lexer-20060228 238
+RMD160 0d8fb9d2abcc9880f298f78f8b9cf9af0aa5d467 files/digest-cl-lexer-20060228 238
+SHA256 5d2464df5261dc52bca4fba75d6ded96f648828f92ae0472c7d70ad8d10f94be files/digest-cl-lexer-20060228 238
+MD5 114ffa61ad7c3f621ab5ce567af6d4f5 files/lexer.asd 220
+RMD160 2028b4a7a5c1a6a2a92c25d72002730579026446 files/lexer.asd 220
+SHA256 fa7c008e700ac9e8b5b683358a0ad3bdaa48c26a2ff8f9f680993fd16bb81697 files/lexer.asd 220
+MD5 9b65b0341efc8f4b29498aad23315229 metadata.xml 164
+RMD160 5edb79931b874dc3a72128f0742b9d4c4eb3c8c1 metadata.xml 164
+SHA256 f8efc9385015233c71f279f85bd0a327525b7136cf8714cc04449d8bea4ce22f metadata.xml 164
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2 (GNU/Linux)
+
+iD8DBQFEFGonyiNZaEAZA+ARAgiCAJ9sqly9aueDN1JsrvkMPRL4nST95gCfTcwl
+emWRZQAkYMOYiIZHkrI+JkY=
+=IO9c
+-----END PGP SIGNATURE-----
