@@ -1,0 +1,3 @@
+MD5 be385a90c969cd0433e1eb82b1600c9d lexer-20060228.tar.gz 5008
+RMD160 97e75cfeb812bb5b6eb4f008da07e4fcedc45e50 lexer-20060228.tar.gz 5008
+SHA256 8ef1a1393a3655603472b57c42acd6d4224c2315b656769251cea8f19675ac2f lexer-20060228.tar.gz 5008
