@@ -1,6 +1,12 @@
 # ChangeLog for dev-lisp/cl-lexer
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-lexer/ChangeLog,v 1.8 2005/05/24 18:48:33 mkennedy Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-lexer/ChangeLog,v 1.9 2006/03/12 18:36:11 mkennedy Exp $
+
+*cl-lexer-20060228 (12 Mar 2006)
+
+  12 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org> +files/lexer.asd,
+  +cl-lexer-20060228.ebuild:
+  New upstream version; No longer depend on Debian system.
 
   24 May 2005; <mkennedy@gentoo.org> cl-lexer-1-r1.ebuild:
   Keywording ~sparc
